parser/SyntaxChecker.java
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package parser;

import ast.*;
import syntaxvisitor.GrapherVisitor;
import java.nio.file.Files;
import java.nio.file.Path;
import java.util.List;
import java.util.ArrayList;

public class SyntaxChecker implements SyntaxCheckerConstants {

/* GRAMMAR RULES */
  final public ProgramNode program() throws ParseException {
    List<DeclarationNode> declarations = new ArrayList<DeclarationNode>();
    DeclarationNode decl;
    label_1:
    while (true) {
      decl = declaration();
                             declarations.add(decl);
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
    }
    jj_consume_token(0);
      {if (true) return new ProgramNode(declarations);}
    throw new Error("Missing return statement in function");
  }

  final public DeclarationNode declaration() throws ParseException {
    TypeSpecifierNode type;
    String id;
    type = typeSpecifier();
    id = jj_consume_token(IDENTIFIER).image;
    if (jj_2_2(2)) {
      jj_consume_token(LPAREN);
                   {if (true) return funDeclaration(type, id);}
    } else {
          {if (true) return varDeclaration(type, id);}
    }
    throw new Error("Missing return statement in function");
  }

  final public VarDeclarationNode varDeclaration(TypeSpecifierNode type, String id) throws ParseException {
    ExpressionNode size = null;
    if (jj_2_3(2)) {
      jj_consume_token(SEMICOLON);
          {if (true) return new VarDeclarationNode(type, id);}
    } else if (jj_2_4(2)) {
      jj_consume_token(LBRACKET);
      size = expression();
      jj_consume_token(RBRACKET);
      jj_consume_token(SEMICOLON);
          {if (true) return new VarDeclarationNode(type, id, size);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FunDeclarationNode funDeclaration(TypeSpecifierNode type, String id) throws ParseException {
    List<ParamNode> params;
    CompoundStmtNode body;
    params = params();
    jj_consume_token(RPAREN);
    body = compoundStmt();
      {if (true) return new FunDeclarationNode(type, id, params, body);}
    throw new Error("Missing return statement in function");
  }

  final public TypeSpecifierNode typeSpecifier() throws ParseException {
    if (jj_2_5(2)) {
      jj_consume_token(INT);
                {if (true) return new TypeSpecifierNode(TypeSpecifierNode.Type.INT);}
    } else if (jj_2_6(2)) {
      jj_consume_token(VOID);
                 {if (true) return new TypeSpecifierNode(TypeSpecifierNode.Type.VOID);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List<ParamNode> params() throws ParseException {
    List<ParamNode> paramList = new ArrayList<ParamNode>();
    ParamNode param;
    if (jj_2_10(2)) {
      jj_consume_token(VOID);
      if (jj_2_8(2)) {
        jj_consume_token(IDENTIFIER);
        param = voidParam();
                                               paramList.add(param);
        label_2:
        while (true) {
          if (jj_2_7(2)) {
            ;
          } else {
            break label_2;
          }
          jj_consume_token(COMMA);
          param = param();
                                        paramList.add(param);
        }
      } else {

      }
          {if (true) return paramList;}
    } else if (jj_2_11(2)) {
      param = param();
                          paramList.add(param);
      label_3:
      while (true) {
        if (jj_2_9(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        param = param();
                                    paramList.add(param);
      }
          {if (true) return paramList;}
    } else {
          {if (true) return paramList;}
    }
    throw new Error("Missing return statement in function");
  }

  final public ParamNode voidParam() throws ParseException {
    String id;
    boolean isArray = false;
    id = jj_consume_token(IDENTIFIER).image;
    if (jj_2_12(2)) {
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                              isArray = true;
    } else {
      ;
    }
      {if (true) return new ParamNode(new TypeSpecifierNode(TypeSpecifierNode.Type.VOID), id, isArray);}
    throw new Error("Missing return statement in function");
  }

  final public ParamNode param() throws ParseException {
    TypeSpecifierNode type;
    String id;
    boolean isArray = false;
    type = typeSpecifier();
    id = jj_consume_token(IDENTIFIER).image;
    if (jj_2_13(2)) {
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                              isArray = true;
    } else {
      ;
    }
      {if (true) return new ParamNode(type, id, isArray);}
    throw new Error("Missing return statement in function");
  }

  final public CompoundStmtNode compoundStmt() throws ParseException {
    List<VarDeclarationNode> localDecls = new ArrayList<VarDeclarationNode>();
    List<StatementNode> statements = new ArrayList<StatementNode>();
    VarDeclarationNode varDecl;
    StatementNode stmt;
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      if (jj_2_14(2147483647)) {
        ;
      } else {
        break label_4;
      }
      varDecl = localVarDeclaration();
                                          localDecls.add(varDecl);
    }
    label_5:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_5;
      }
      stmt = statement();
                           statements.add(stmt);
    }
    jj_consume_token(RBRACE);
      {if (true) return new CompoundStmtNode(localDecls, statements);}
    throw new Error("Missing return statement in function");
  }

  final public VarDeclarationNode localVarDeclaration() throws ParseException {
    TypeSpecifierNode type;
    String id;
    ExpressionNode size = null;
    type = typeSpecifier();
    id = jj_consume_token(IDENTIFIER).image;
    if (jj_2_16(2)) {
      jj_consume_token(SEMICOLON);
          {if (true) return new VarDeclarationNode(type, id);}
    } else if (jj_2_17(2)) {
      jj_consume_token(LBRACKET);
      size = expression();
      jj_consume_token(RBRACKET);
      jj_consume_token(SEMICOLON);
          {if (true) return new VarDeclarationNode(type, id, size);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public StatementNode statement() throws ParseException {
    StatementNode stmt;
    if (jj_2_18(2)) {
      stmt = expressionStmt();
    } else if (jj_2_19(2)) {
      stmt = compoundStmt();
    } else if (jj_2_20(2)) {
      stmt = ifStmt();
    } else if (jj_2_21(2)) {
      stmt = whileStmt();
    } else if (jj_2_22(2)) {
      stmt = doWhileStmt();
    } else if (jj_2_23(2)) {
      stmt = returnStmt();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return stmt;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionStmtNode expressionStmt() throws ParseException {
    ExpressionNode expr = null;
    if (jj_2_24(2)) {
      expr = expression();
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
      {if (true) return new ExpressionStmtNode(expr);}
    throw new Error("Missing return statement in function");
  }

  final public IfNode ifStmt() throws ParseException {
    ExpressionNode condition;
    StatementNode thenStmt;
    StatementNode elseStmt = null;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    condition = expression();
    jj_consume_token(RPAREN);
    thenStmt = statement();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      elseStmt = statement();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
      {if (true) return new IfNode(condition, thenStmt, elseStmt);}
    throw new Error("Missing return statement in function");
  }

  final public WhileNode whileStmt() throws ParseException {
    ExpressionNode condition;
    StatementNode body;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    condition = expression();
    jj_consume_token(RPAREN);
    body = statement();
      {if (true) return new WhileNode(condition, body);}
    throw new Error("Missing return statement in function");
  }

  final public DoWhileNode doWhileStmt() throws ParseException {
    StatementNode body;
    ExpressionNode condition;
    jj_consume_token(DO);
    body = statement();
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    condition = expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
      {if (true) return new DoWhileNode(body, condition);}
    throw new Error("Missing return statement in function");
  }

  final public ReturnNode returnStmt() throws ParseException {
    ExpressionNode expr = null;
    jj_consume_token(RETURN);
    if (jj_2_25(2)) {
      expr = expression();
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
      {if (true) return new ReturnNode(expr);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression() throws ParseException {
    ExpressionNode expr;
    expr = assignmentExpression();
      {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode assignmentExpression() throws ParseException {
    ExpressionNode left, right;
    left = relationalExpression();
    if (jj_2_26(2)) {
      jj_consume_token(ASSIGN);
      right = assignmentExpression();
          left = new BinaryOpNode(left, BinaryOpNode.Operator.ASSIGN, right);
    } else {
      ;
    }
      {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode relationalExpression() throws ParseException {
    ExpressionNode left, right;
    BinaryOpNode.Operator op;
    left = additiveExpression();
    label_6:
    while (true) {
      if (jj_2_27(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_28(2)) {
        jj_consume_token(LT);
                   op = BinaryOpNode.Operator.LT;
      } else if (jj_2_29(2)) {
        jj_consume_token(LE);
                   op = BinaryOpNode.Operator.LE;
      } else if (jj_2_30(2)) {
        jj_consume_token(GT);
                   op = BinaryOpNode.Operator.GT;
      } else if (jj_2_31(2)) {
        jj_consume_token(GE);
                   op = BinaryOpNode.Operator.GE;
      } else if (jj_2_32(2)) {
        jj_consume_token(EQ);
                   op = BinaryOpNode.Operator.EQ;
      } else if (jj_2_33(2)) {
        jj_consume_token(NE);
                   op = BinaryOpNode.Operator.NE;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = additiveExpression();
          left = new BinaryOpNode(left, op, right);
    }
      {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode additiveExpression() throws ParseException {
    ExpressionNode left, right;
    BinaryOpNode.Operator op;
    left = multiplicativeExpression();
    label_7:
    while (true) {
      if (jj_2_34(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_35(2)) {
        jj_consume_token(PLUS);
                     op = BinaryOpNode.Operator.PLUS;
      } else if (jj_2_36(2)) {
        jj_consume_token(MINUS);
                      op = BinaryOpNode.Operator.MINUS;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = multiplicativeExpression();
          left = new BinaryOpNode(left, op, right);
    }
      {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode multiplicativeExpression() throws ParseException {
    ExpressionNode left, right;
    BinaryOpNode.Operator op;
    left = primaryExpression();
    label_8:
    while (true) {
      if (jj_2_37(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_38(2)) {
        jj_consume_token(MULTIPLY);
                         op = BinaryOpNode.Operator.MULTIPLY;
      } else if (jj_2_39(2)) {
        jj_consume_token(DIVIDE);
                       op = BinaryOpNode.Operator.DIVIDE;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = primaryExpression();
          left = new BinaryOpNode(left, op, right);
    }
      {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode primaryExpression() throws ParseException {
    ExpressionNode expr;
    String id;
    Token num;
    List<ExpressionNode> args;
    if (jj_2_42(2)) {
      jj_consume_token(LPAREN);
      expr = expression();
      jj_consume_token(RPAREN);
          {if (true) return expr;}
    } else if (jj_2_43(2)) {
      id = jj_consume_token(IDENTIFIER).image;
      if (jj_2_40(2)) {
        jj_consume_token(LBRACKET);
        expr = expression();
        jj_consume_token(RBRACKET);
              {if (true) return new VarNode(id, expr);}
      } else if (jj_2_41(2)) {
        jj_consume_token(LPAREN);
        args = arguments();
        jj_consume_token(RPAREN);
              {if (true) return new CallNode(id, args);}
      } else {
              {if (true) return new VarNode(id);}
      }
    } else if (jj_2_44(2)) {
      num = jj_consume_token(NUMBER);
          {if (true) return new NumberNode(Integer.parseInt(num.image));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List<ExpressionNode> arguments() throws ParseException {
    List<ExpressionNode> args = new ArrayList<ExpressionNode>();
    ExpressionNode expr;
    if (jj_2_46(2)) {
      expr = expression();
                              args.add(expr);
      label_9:
      while (true) {
        if (jj_2_45(2)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(COMMA);
        expr = expression();
                                        args.add(expr);
      }
    } else {
      ;
    }
      {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }
